[fix bug 1199738] Update FxOS device availability.

--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -65,14 +65,9 @@
               <option value="" selected>{{ _('Select a location') }}</option>
               {# be nice to populate these via JS, but would make L10n difficult? #}
               <option value="ar">{{ _('Argentina') }}</option>
-              <option value="au">{{ _('Australia') }}</option>
-              <option value="bd">{{ _('Bangladesh') }}</option>
-              <option value="be">{{ _('Belgium') }}</option>
-              <option value="br">{{ _('Brazil') }}</option>
               <option value="cm">{{ _('Cameroon') }}</option>
               <option value="cl">{{ _('Chile') }}</option>
               <option value="co">{{ _('Colombia') }}</option>
-              <option value="cr">{{ _('Costa Rica') }}</option>
               <option value="cz">{{ _('Czech Republic') }}</option>
               <option value="eg">{{ _('Egypt') }}</option>
               <option value="sv">{{ _('El Salvador') }}</option>
@@ -82,31 +77,21 @@
               <option value="gt">{{ _('Guatemala') }}</option>
               <option value="hu">{{ _('Hungary') }}</option>
               <option value="in">{{ _('India') }}</option>
-              <option value="it">{{ _('Italy') }}</option>
               <option value="ci">{{ _('Ivory Coast') }}</option>
               <option value="jp">{{ _('Japan') }}</option>
               <option value="ke">{{ _('Kenya') }}</option>
               <option value="lu">{{ _('Luxembourg') }}</option>
-              <option value="mk">{{ _('Macedonia') }}</option>
               <option value="mg">{{ _('Madagascar') }}</option>
               <option value="mu">{{ _('Mauritius') }}</option>
               <option value="mx">{{ _('Mexico') }}</option>
-              <option value="me">{{ _('Montenegro') }}</option>
-              <option value="mm">{{ _('Myanmar') }}</option>
+              <option value="ni">{{ _('Nicaragua') }}</option>
               <option value="pa">{{ _('Panama') }}</option>
               <option value="pe">{{ _('Peru') }}</option>
-              <option value="ph">{{ _('Philippines') }}</option>
-              <option value="pl">{{ _('Poland') }}</option>
               <option value="ru">{{ _('Russia') }}</option>
               <option value="sn">{{ _('Senegal') }}</option>
               <option value="rs">{{ _('Serbia') }}</option>
-              <option value="za">{{ _('South Africa') }}</option>
-              <option value="es">{{ _('Spain') }}</option>
-              <option value="ch">{{ _('Switzerland') }}</option>
               <option value="tn">{{ _('Tunisia') }}</option>
-              <option value="gb">{{ _('United Kingdom') }}</option>
               <option value="uy">{{ _('Uruguay') }}</option>
-              <option value="ve">{{ _('Venezuela') }}</option>
             </select>
           </form>
 
@@ -217,31 +202,17 @@
                   <h5>{{ _('Available in') }}</h5>
 
                   <ul class="comma-list">
-                    <li>{{ _('Brazil') }}</li>
                     <li>{{ _('Chile') }}</li>
                     <li>{{ _('Colombia') }}</li>
-                    <li>{{ _('Germany') }}</li>
-                    <li>{{ _('Greece') }}</li>
-                    <li>{{ _('Hungary') }}</li>
-                    <li>{{ _('Italy') }}</li>
                     <li>{{ _('Mexico') }}</li>
-                    <li>{{ _('Montenegro') }}</li>
-                    <li>{{ _('Peru') }}</li>
-                    <li>{{ _('Poland') }}</li>
                     <li>{{ _('Serbia') }}</li>
-                    <li>{{ _('Venezuela') }}</li>
                   </ul>
 
                   <h5>{{ _('Operators') }}</h5>
                   <ul class="comma-list">
-                    <li>{{ _('Congstar') }}</li>
-                    <li>{{ _('Cosmote') }}</li>
                     <li>{{ _('Movistar') }}</li>
-                    <li>{{ _('T-Mobile') }}</li>
                     <li>{{ _('Telcel') }}</li>
                     <li>{{ _('Telenor') }}</li>
-                    <li>{{ _('TIM') }}</li>
-                    <li>{{ _('Vivo') }}</li>
                   </ul>
                 </div>
               </div>{#--/.features--#}
@@ -395,20 +366,6 @@
                   </ul>
 
                   <small>* {{ memory_disclaimer }}</small>
-                </div>
-
-                <div class="feature-group availability">
-                  <h5>{{ _('Available in') }}</h5>
-
-                  <ul class="comma-list">
-                    <li>{{ _('Brazil') }}</li>
-                    <li>{{ _('Uruguay') }}</li>
-                  </ul>
-
-                  <h5>{{ _('Operator') }}</h5>
-                  <ul class="comma-list">
-                    <li>{{ _('Vivo') }}</li>
-                  </ul>
                 </div>
               </div>{#--/.features--#}
 
@@ -588,11 +545,7 @@
                   <h5>{{ _('Available in') }}</h5>
 
                   <ul class="comma-list">
-                    <li>{{ _('Colombia') }}</li>
                     <li>{{ _('Mexico') }}</li>
-                    <li>{{ _('Peru') }}</li>
-                    <li>{{ _('Spain') }}</li>
-                    <li>{{ _('Venezuela') }}</li>
                   </ul>
 
                   <h5>{{ _('Operator') }}</h5>
@@ -792,6 +745,12 @@
                   <ul class="comma-list">
                     <li>{{ _('Mexico') }}</li>
                   </ul>
+
+                  <h5>{{ _('Operator') }}</h5>
+
+                  <ul class="comma-list">
+                    <li>{{ _('Movistar') }}</li>
+                  </ul>
                 </div>
               </div>{#--/.features--#}
 
@@ -922,14 +881,11 @@
 
                   <ul class="comma-list">
                     <li>{{ _('Chile') }}</li>
-                    <li>{{ _('Costa Rica') }}</li>
-                    <li>{{ _('El Salvador') }}</li>
+                    <li>{{ _('Colombia') }}</li>
                     <li>{{ _('Greece') }}</li>
-                    <li>{{ _('Macedonia') }}</li>
                     <li>{{ _('Mexico') }}</li>
-                    <li>{{ _('Montenegro') }}</li>
+                    <li>{{ _('Nicaragua') }}</li>
                     <li>{{ _('Peru') }}</li>
-                    <li>{{ _('Spain') }}</li>
                     <li>{{ _('Uruguay') }}</li>
                   </ul>
 
@@ -938,7 +894,6 @@
                   <ul class="comma-list">
                     <li>{{ _('Cosmote') }}</li>
                     <li>{{ _('Movistar') }}</li>
-                    <li>{{ _('T-Mobile') }}</li>
                   </ul>
                 </div>
               </div>{#--/.features--#}
@@ -987,14 +942,9 @@
                   <h5>{{ _('Available in') }}</h5>
 
                   <ul class="comma-list">
-                    <li>{{ _('Australia') }}</li>
-                    <li>{{ _('Belgium') }}</li>
                     <li>{{ _('France') }}</li>
                     <li>{{ _('Germany') }}</li>
                     <li>{{ _('Luxembourg') }}</li>
-                    <li>{{ _('Russia') }}</li>
-                    <li>{{ _('Switzerland') }}</li>
-                    <li>{{ _('United Kingdom') }}</li>
                     <li>{{ _('Uruguay') }}</li>
                   </ul>
                 </div>
@@ -1137,7 +1087,9 @@
                   <ul class="comma-list">
                     <li>{{ _('Argentina') }}</li>
                     <li>{{ _('Colombia') }}</li>
+                    <li>{{ _('El Salvador') }}</li>
                     <li>{{ _('Guatemala') }}</li>
+                    <li>{{ _('Nicaragua') }}</li>
                     <li>{{ _('Panama') }}</li>
                     <li>{{ _('Peru') }}</li>
                     <li>{{ _('Uruguay') }}</li>
@@ -1247,16 +1199,12 @@
                     <li>{{ _('Czech Republic') }}</li>
                     <li>{{ _('Germany') }}</li>
                     <li>{{ _('Hungary') }}</li>
-                    <li>{{ _('Poland') }}</li>
                     <li>{{ _('Russia') }}</li>
-                    <li>{{ _('South Africa') }}</li>
                   </ul>
 
                   <h5>{{ _('Operators') }}</h5>
                   <ul class="comma-list">
-                    <li>{{ _('Congstar') }}</li>
                     <li>{{ _('MegaFon') }}</li>
-                    <li>{{ _('MTN') }}</li>
                     <li>{{ _('O2') }}</li>
                     <li>{{ _('T-Mobile') }}</li>
                   </ul>
@@ -1345,12 +1293,6 @@
                 </div>
 
                 <div class="feature-group availability">
-                  <h5>{{ _('Available in') }}</h5>
-
-                  <ul class="comma-list">
-                    <li>{{ _('India') }}</li>
-                  </ul>
-
                   <h5>{{ _('Brand') }}</h5>
 
                   <ul class="comma-list">
@@ -1507,12 +1449,6 @@
                 </div>
 
                 <div class="feature-group availability">
-                  <h5>{{ _('Available in') }}</h5>
-
-                  <ul class="comma-list">
-                    <li>{{ _('India') }}</li>
-                  </ul>
-
                   <h5>{{ _('Brand') }}</h5>
                   <ul class="comma-list">
                     <li>{{ _('Spice') }}</li>
@@ -1641,19 +1577,6 @@
 
                   <small>* {{ memory_disclaimer }}</small>
                 </div>
-
-                <div class="feature-group availability">
-                  <h5>{{ _('Available in') }}</h5>
-
-                  <ul class="comma-list">
-                    <li>{{ _('Bangladesh') }}</li>
-                  </ul>
-
-                  <h5>{{ _('Operator') }}</h5>
-                  <ul class="comma-list">
-                    <li>{{ _('Grameenphone') }}</li>
-                  </ul>
-                </div>
               </div>{#--/.features--#}
               <div class="device-details specifications pager-page" id="symphony_gofoxf15-specifications">
                 <h4 class="device-details-title">{{ _('Specifications') }}</h4>
@@ -1755,12 +1678,6 @@
                 </div>
 
                 <div class="feature-group availability">
-                  <h5>{{ _('Available in') }}</h5>
-
-                  <ul class="comma-list">
-                    <li>{{ _('India') }}</li>
-                  </ul>
-
                   <h5>{{ _('Brand') }}</h5>
                   <ul class="comma-list">
                     <li>{{ _('Alcatel') }}</li>
@@ -1929,12 +1846,6 @@
                 </div>
 
                 <div class="feature-group availability">
-                  <h5>{{ _('Available in') }}</h5>
-
-                  <ul class="comma-list">
-                    <li>{{ _('India') }}</li>
-                  </ul>
-
                   <h5>{{ _('Brand') }}</h5>
 
                   <ul class="comma-list">
@@ -2049,13 +1960,6 @@
                 </div>
 
                 <div class="feature-group availability">
-                  <h5>{{ _('Available in') }}</h5>
-
-                  <ul class="comma-list">
-                    <li>{{ _('Myanmar') }}</li>
-                    <li>{{ _('Philippines') }}</li>
-                  </ul>
-
                   <h5>{{ _('Brand') }}</h5>
 
                   <ul class="comma-list">
