--- a/media/css/firefox/os/get_device.less
+++ b/media/css/firefox/os/get_device.less
@@ -85,11 +85,16 @@
         .font-size(17px);
         .trailing-arrow();
     }
-    .movistar {
-        background: transparent url('/media/img/firefox/os/logo/movistar.jpg') top center no-repeat;
+    .last {
+        border-right: none;
     }
-    .t-mobile {
-        background: transparent url('/media/img/firefox/os/logo/t-mobile.jpg') top center no-repeat;
+
+    // provider logos
+    .au {
+        background: transparent url('/media/img/firefox/os/logo/au.png') top center no-repeat;
+    }
+    .cdiscount {
+        background: transparent url('/media/img/firefox/os/logo/cdiscount.jpg') top center no-repeat;
     }
     .congstar {
         background: transparent url('/media/img/firefox/os/logo/congstar.jpg') top center no-repeat;
@@ -97,8 +102,44 @@
     .cosmote {
         background: transparent url('/media/img/firefox/os/logo/cosmote.png') top center no-repeat;
     }
-    .vivo {
-        background: transparent url('/media/img/firefox/os/logo/vivo.jpg') top center no-repeat;
+    .darty {
+        background: transparent url('/media/img/firefox/os/logo/darty.jpg') top center no-repeat;
+    }
+    .e-leclerc {
+        background: transparent url('/media/img/firefox/os/logo/e-leclerc.png') top center no-repeat;
+    }
+    .ebay {
+        background: transparent url('/media/img/firefox/os/logo/ebay.jpg') top center no-repeat;
+    }
+    .ldlc {
+        background: transparent url('/media/img/firefox/os/logo/ldlc.png') top center no-repeat;
+    }
+    .materiel-net {
+        background: transparent url('/media/img/firefox/os/logo/materiel-net.png') top center no-repeat;
+    }
+    .megafon {
+        background: transparent url('/media/img/firefox/os/logo/megafon.png') top center no-repeat;
+    }
+    .mistergooddeal {
+        background: transparent url('/media/img/firefox/os/logo/mistergooddeal.jpg') top center no-repeat;
+    }
+    .movistar {
+        background: transparent url('/media/img/firefox/os/logo/movistar.jpg') top center no-repeat;
+    }
+    .o2 {
+        background: transparent url('/media/img/firefox/os/logo/o2.png') top center no-repeat;
+    }
+    .orange {
+        background: transparent url('/media/img/firefox/os/logo/orange.png') top center no-repeat;
+    }
+    .rue-du-commerce {
+        background: transparent url('/media/img/firefox/os/logo/rue-du-commerce.jpg') top center no-repeat;
+    }
+    .spice {
+        background: transparent url('/media/img/firefox/os/logo/spice.gif') top center no-repeat;
+    }
+    .t-mobile {
+        background: transparent url('/media/img/firefox/os/logo/t-mobile.jpg') top center no-repeat;
     }
     .telcel {
         background: transparent url('/media/img/firefox/os/logo/telcel.jpg') top center no-repeat;
@@ -106,93 +147,50 @@
     .telenor {
         background: transparent url('/media/img/firefox/os/logo/telenor.jpg') top center no-repeat;
     }
-    .tim {
-        background: transparent url('/media/img/firefox/os/logo/tim.png') top center no-repeat;
-    }
-    .ebay {
-        background: transparent url('/media/img/firefox/os/logo/ebay.jpg') top center no-repeat;
-    }
-    .zte-france {
-        background: transparent url('/media/img/firefox/os/logo/zte.png') top center no-repeat;
-    }
-    .ldlc {
-        background: transparent url('/media/img/firefox/os/logo/ldlc.png') top center no-repeat;
-    }
-    .e-leclerc {
-        background: transparent url('/media/img/firefox/os/logo/e-leclerc.png') top center no-repeat;
-    }
-    .cdiscount {
-        background: transparent url('/media/img/firefox/os/logo/cdiscount.jpg') top center no-repeat;
-    }
-    .materiel-net {
-        background: transparent url('/media/img/firefox/os/logo/materiel-net.png') top center no-repeat;
-    }
-    .darty {
-        background: transparent url('/media/img/firefox/os/logo/darty.jpg') top center no-repeat;
-    }
-    .rue-du-commerce {
-        background: transparent url('/media/img/firefox/os/logo/rue-du-commerce.jpg') top center no-repeat;
+    .topachat {
+        background: transparent url('/media/img/firefox/os/logo/topachat.png') top center no-repeat;
     }
     .webdistrib {
         background: transparent url('/media/img/firefox/os/logo/webdistrib.jpg') top center no-repeat;
     }
-    .intex {
-        background: transparent url('/media/img/firefox/os/logo/intex.png') top center no-repeat;
+    .zte-france {
+        background: transparent url('/media/img/firefox/os/logo/zte.png') top center no-repeat;
     }
-    .grameenphone {
-        background: transparent url('/media/img/firefox/os/logo/grameenphone.gif') top center no-repeat;
-    }
-    .spice {
-        background: transparent url('/media/img/firefox/os/logo/spice.gif') top center no-repeat;
+
+    /*
+    providers below are currently unused, but may be used again in the future
+
+    .cherry-mobile {
+        background: transparent url('/media/img/firefox/os/logo/cherry-mobile.png') top center no-repeat;
     }
     .flipkart {
         background: transparent url('/media/img/firefox/os/logo/flipkart.png') top center no-repeat;
     }
+    .grameenphone {
+        background: transparent url('/media/img/firefox/os/logo/grameenphone.gif') top center no-repeat;
+    }
+    .intex {
+        background: transparent url('/media/img/firefox/os/logo/intex.png') top center no-repeat;
+    }
     .jbhifi {
         background: transparent url('/media/img/firefox/os/logo/jbhifi.png') top center no-repeat;
-    }
-    .zen {
-        background: transparent url('/media/img/firefox/os/logo/zen.png') top center no-repeat;
-    }
-    .mistergooddeal {
-        background: transparent url('/media/img/firefox/os/logo/mistergooddeal.jpg') top center no-repeat;
-    }
-    .topachat {
-        background: transparent url('/media/img/firefox/os/logo/topachat.png') top center no-repeat;
-    }
-    .cherry-mobile {
-        background: transparent url('/media/img/firefox/os/logo/cherry-mobile.png') top center no-repeat;
-    }
-    .megafon {
-        background: transparent url('/media/img/firefox/os/logo/megafon.png') top center no-repeat;
-    }
-    .au {
-        background: transparent url('/media/img/firefox/os/logo/au.png') top center no-repeat;
     }
     .mtn {
         background: transparent url('/media/img/firefox/os/logo/mtn.png') top center no-repeat;
     }
-    .orange {
-        background: transparent url('/media/img/firefox/os/logo/orange.png') top center no-repeat;
+    .tim {
+        background: transparent url('/media/img/firefox/os/logo/tim.png') top center no-repeat;
     }
-    .last {
-        border-right: none;
+    .vivo {
+        background: transparent url('/media/img/firefox/os/logo/vivo.jpg') top center no-repeat;
     }
+    .zen {
+        background: transparent url('/media/img/firefox/os/logo/zen.png') top center no-repeat;
+    }
+    */
 }
 // An alternative logos and link text for specific countries
 #provider-links {
-    .provider[data-country="de"] {
-        .alcatel-one-touch-fire,
-        .alcatel-one-touch-fire-e {
-            background: transparent url('/media/img/firefox/os/logo/congstar.jpg') top center no-repeat;
-            &.o2 {
-                background-image: url('/media/img/firefox/os/logo/o2.png');
-            }
-        }
-        .zte-open-c {
-            background: transparent url('/media/img/firefox/os/logo/ebay.jpg') top center no-repeat;
-        }
-    }
     .provider[data-country="hu"] {
         .t-mobile {
             background: transparent url('/media/img/firefox/os/logo/t-mobile-alt.jpg') top center no-repeat;
