--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -8,31 +8,7 @@
         <div class="provider" data-country="ar">
           <h3>{{ _('Argentina') }}</h3>
           <ul>
-            <li><a class="movistar" href="http://www.movistar.com.ar">Movistar</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="au">
-          <h3>{{ _('Australia') }}</h3>
-          <ul>
-            <li><a class="jbhifi" href="https://www.jbhifi.com.au/phones/Outright-Mobile-Handsets/zte/zte-open-c-handset-grey/624980/">ZTE Open C</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="bd">
-          <h3>{{ _('Bangladesh') }}</h3>
-          <ul>
-            <li><a class="grameenphone" href="http://www.grameenphone.com/personal/handset-device/mobile-phones/symphony-gofox-f15">Symphony GoFox F15</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="be">
-          <h3>{{_('Belgium')}}</h3>
-          <ul>
-            <li><a class="ldlc" href="http://www.ldlc.be/fiche/PB00171571.html">LDLC</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="br">
-          <h3>{{_('Brazil')}}</h3>
-          <ul>
-            <li><a class="vivo" href="http://www.vivo.com.br/firefox">Vivo</a></li>
+            <li><a class="movistar" href="http://www.tiendamovistar.com.ar/product/ZTE-Open-II-Negro,3207,245.aspx">Movistar</a></li>
           </ul>
         </div>
         <div class="provider" data-country="ci">
@@ -48,12 +24,6 @@
             <li><a class="movistar" href="http://www.movistar.cl/equipos/alcatel-fire-c">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
-        <div class="provider" data-country="ch">
-          <h3>{{_('Switzerland')}}</h3>
-          <ul>
-            <li><a class="ldlc" href="http://www.ldlc.ch/fiche/PB00171571.html">LDLC</a></li>
-          </ul>
-        </div>
         <div class="provider" data-country="cm">
           <h3>{{ _('Cameroon') }}</h3>
           <ul>
@@ -63,13 +33,7 @@
         <div class="provider" data-country="co">
           <h3>{{_('Colombia')}}</h3>
           <ul>
-            <li><a class="movistar" href="http://www.movistar.co">Movistar</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="cr">
-          <h3>{{ _('Costa Rica') }}</h3>
-          <ul>
-            <li><a class="movistar" href="http://movistar.cr/tienda/Marcas/Alcatel/ALCATEL-FIRE-C/p/4ALCATEL_FIRE_C">Alcatel One Touch Fire C</a></li>
+            <li><a class="movistar" href="http://www.movistar.co/tienda/Open-Catalog/Equipos/Celulares/c/celulares?q=%3Aranking%3ASistema+Operativo%3AFirefox+OS">Movistar</a></li>
           </ul>
         </div>
         <div class="provider" data-country="cz">
@@ -81,23 +45,14 @@
         <div class="provider" data-country="de">
           <h3>{{_('Germany')}}</h3>
           <ul>
-            <li><a class="alcatel-one-touch-fire" href="http://aktion.congstar.de/firefox-os">Alcatel One Touch Fire</a></li>
-            <li><a class="alcatel-one-touch-fire-e" href="http://www.congstar.de/handy/alcatel-onetouch-fire-e-braun/">Alcatel One Touch Fire E</a></li>
-            <li><a class="alcatel-one-touch-fire o2" href="http://www.o2online.de/handy/alcatel-onetouch-fire-e/">Alcatel One Touch Fire E</a></li>
-            <li><a class="zte-open-c" href="http://www.ebay.de/itm/eBay-Exklusiv-ZTE-OPEN-C-Neuesten-Firefox-OS-DualCore-1-2-GHz-4-0-3G-Smartphone-/131151681046?ssPageName=STRK:MESE:IT">ZTE Open C</a></li>
+            <li><a class="o2" href="http://www.o2online.de/eshop/handy/alcatel-onetouch-fire-e-anthrazit">Alcatel One Touch Fire E</a></li>
+            <li><a class="ebay" href="http://www.ebay.de/itm/eBay-Exklusiv-ZTE-OPEN-C-Neuesten-Firefox-OS-DualCore-1-2-GHz-4-0-3G-Smartphone-/131151681046?ssPageName=STRK:MESE:IT">ZTE Open C</a></li>
           </ul>
         </div>
         <div class="provider" data-country="eg">
           <h3>{{ _('Egypt') }}</h3>
           <ul>
             <li><a class="orange" href="https://www.mobinil.com/en/shop/offers-promotions/klif-bundle-with-control-free-176-offers">Orange</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="es">
-          <h3>{{_('Spain')}}</h3>
-          <ul>
-            <li><a class="movistar" href="https://www.movistar.es/particulares/movil/moviles/ficha/alcatel-ot-fire-c?pestana=4&amp;desc=camp">Alcatel One Touch Fire C</a></li>
-            <li><a class="movistar" href="http://www.movistar.es/firefoxos?aff=aff-firefoxOS1">ZTE Open</a></li>
           </ul>
         </div>
         <div class="provider" data-country="fr">
@@ -115,46 +70,27 @@
             <li><a class="topachat" href="http://www.topachat.com/pages/detail2_cat_est_telephonie_puis_rubrique_est_wt_smartp_puis_ref_est_tl10012764.html">Top Achat</a></li>
           </ul>
         </div>
-        <div class="provider" data-country="gb">
-          <h3>{{_('United Kingdom')}}</h3>
-          <ul>
-            <li><a class="ebay" href="http://item.ebay.co.uk/171301269724">eBay</a></li>
-          </ul>
-        </div>
         <div class="provider" data-country="gr">
           <h3>{{_('Greece')}}</h3>
           <ul>
-            <li><a class="cosmote" href="http://www.cosmote.gr/cosmoportal/cosmote.portal?_nfpb=true&amp;_pageLabel=HDV&amp;sku=20290038&amp;s=0">Alcatel One Touch Fire</a></li>
-            <li><a class="cosmote" href="http://www.cosmote.gr/cosmoportal/cosmote.portal?_nfpb=true&amp;_pageLabel=HDV&amp;sku=20294895">Alcatel One Touch Fire C</a></li>
+            <li><a class="cosmote" href="http://www.cosmote.gr/cosmoportal/cosmote.portal?_nfpb=true&_pageLabel=HDV&sku=20294895">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
         <div class="provider" data-country="gt">
           <h3>{{ _('Guatemala') }}</h3>
           <ul>
-            <li><a class="movistar" href="https://www.tienda.movistar.com.gt/interno/seguimiento/detalleTerminal.php?idTerm=150">ZTE Open II</a></li>
+            <li><a class="movistar" href="http://www.movistar.com.gt/tienda_gt/Open-Catalog/Productos/Celulares/Smartphone/ZTE-Open-II/p/ZTE-Open-2">ZTE Open II</a></li>
           </ul>
         </div>
         <div class="provider" data-country="hu">
           <h3>{{_('Hungary')}}</h3>
           <ul>
-            <li><a class="t-mobile" href="https://webshop.t-mobile.hu/webapp/wcs/stores/ProductDisplay?catalogId=2001&amp;storeId=2001&amp;langId=-11&amp;productId=644566">Alcatel One Touch Fire</a></li>
-            <li><a class="t-mobile" href="https://webshop.t-mobile.hu/webapp/wcs/stores/ProductDisplay?catalogId=2001&amp;storeId=2001&amp;langId=-11&amp;productId=737628">Alcatel One Touch Fire E</a></li>
-            <li><a class="telenor" href="http://www.telenor.hu/mobiltelefon/alcatel/one-touch-fire">Telenor</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="it">
-          <h3>{{_('Italy')}}</h3>
-          <ul>
-            <li><a class="tim" href="http://www.tim.it/prodotti/alcatel-one-touch-fire-mozilla-orange">TIM</a></li>
+            <li><a class="t-mobile" href="https://www.telekom.hu/shop/site/pages/mainProduct.jsp?productId=prod3580023&krypto=7xDXFZuJa24%3D&contractType=newPostpaid">Alcatel One Touch Fire E</a></li>
           </ul>
         </div>
         <div class="provider" data-country="in">
           <h3>{{ _('India') }}</h3>
           <ul>
-            <li><a class="intex" href="http://www.snapdeal.com/product/intex-cloud-fx/1356760619">Intex</a></li>
-            <li><a class="spice" href="http://www.snapdeal.com/product/spice-fire-one-mifx1/531126742">Spice Fire One MI FX1</a></li>
-            <li><a class="flipkart" href="http://www.flipkart.com/alcatel-onetouch-firec-4020d/p/itmdys6qffvs6tfd?pid=MOBDYS6NFPNRJUKF&amp;srno=b_10&amp;ref=aa7b01a4-0479-4661-a1e8-19033b513612">Alcatel One Touch Fire C 2G</a></li>
-            <li><a class="zen" href="http://www.homeshop18.com/zen-fire-fox-phone-u105/mobiles/mobile-phones/product:32873765/cid:3027/">Zen 105 Fire</a></li>
             <li><a class="spice" href="http://www.saholic.com/mobile-phones/spice-fire-one-mi-fx2-1012486">Spice Fire One MI FX2</a></li>
           </ul>
         </div>
@@ -175,32 +111,13 @@
         <div class="provider" data-country="lu">
           <h3>{{_('Luxembourg')}}</h3>
           <ul>
-            <li><a class="ldlc" href="http://www.ldlc.lu/fiche/PB00171571.html">LDLC</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="me">
-          <h3>{{_('Montenegro')}}</h3>
-          <ul>
-            <li><a class="telenor" href="http://www.telenor.me/cg/Privatni-korisnici/Uredjaji/Mobilni-telefoni/Alcatel/OT_Fire">Alcatel One Touch Fire</a></li>
-            <li><a class="t-mobile" href="http://telekom.me/alcatel-firefox-c.nspx">Alcatel One Touch Fire C</a></li>
+            <li><a class="ldlc" href="http://www.ldlc.lu/fiche/PB00182658.html">LDLC</a></li>
           </ul>
         </div>
         <div class="provider" data-country="mg">
           <h3>{{ _('Madagascar') }}</h3>
           <ul>
             <li><a class="orange" href="http://www.orange.mg/klif/">Orange</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="mk">
-          <h3>{{ _('Macedonia') }}</h3>
-          <ul>
-            <li><a class="t-mobile" href="http://www.t-mobile.mk/public/detali-za-telefon.nspx?phoneid=17162&amp;tariff=592&amp;subscription=2&amp;duration=2">Alcatel One Touch Fire C</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="mm">
-          <h3>{{ _('Myanmar') }}</h3>
-          <ul>
-            <li><a class="cherry-mobile" href="http://www.cherrymobile.com.ph/products/smart-social/ace">Cherry Mobile Ace</a></li>
           </ul>
         </div>
         <div class="provider" data-country="mu">
@@ -212,14 +129,21 @@
         <div class="provider" data-country="mx">
           <h3>{{_('Mexico')}}</h3>
           <ul>
-            <li><a class="movistar" href="https://www.movistar.com.mx/catalogo">Movistar</a></li>
-            <li><a class="telcel" href="http://www.telcel.com/portal/equipos/begin.do?idEquipo=3618">Telcel</a></li>
+            <li><a class="movistar" href="http://www.movistar.com.mx/tienda/Open-Catalog/Productos/Celulares/c/celulares?q=%3Aname-asc%3Asistemaoperativo%3AFirefox">Movistar</a></li>
+            <li><a class="telcel" href="http://www.telcel.com/portal/equipos/begin.do?idEquipo=3883">Telcel</a></li>
+          </ul>
+        </div>
+        <div class="provider" data-country="ni">
+          <h3>{{ _('Nicaragua') }}</h3>
+          <ul>
+            <li><a class="movistar" href="http://www.movistar.com.ni/tienda_ni/Open-Catalog/Productos/Celulares/Smartphone/Alcatel-Fire-C/p/alcatel_fire_c">Alcatel One Touch Fire C</a></li>
+            <li><a class="movistar" href="http://www.movistar.com.ni/tienda_ni/Open-Catalog/Productos/Celulares/Smartphone/Zte-Open-II-/p/zte_open_II_black">ZTE Open II</a></li>
           </ul>
         </div>
         <div class="provider" data-country="pa">
           <h3>{{ _('Panama') }}</h3>
           <ul>
-            <li><a class="movistar" href="http://www.movistar.com.pa/">ZTE Open II</a></li>
+            <li><a class="movistar" href="http://soporteequipos.movistar.com.pa/web/zte-open-2-firefox-1-3-0-0/">ZTE Open II</a></li>
           </ul>
         </div>
         <div class="provider" data-country="pe">
@@ -227,19 +151,6 @@
           <ul>
             <li><a class="movistar" href="http://catalogo.movistar.com.pe/alcatel-ot-4019-fire-c">Alcatel One Touch Fire C</a></li>
             <li><a class="movistar" href="http://catalogo.movistar.com.pe/zte-open-2">ZTE Open II</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="ph">
-          <h3>{{ _('Philippines') }}</h3>
-          <ul>
-            <li><a class="cherry-mobile" href="http://www.cherrymobile.com.ph/products/smart-social/ace">Cherry Mobile Ace</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="pl">
-          <h3>{{_('Poland')}}</h3>
-          <ul>
-            <li><a class="t-mobile" href="http://www.t-mobile.pl/pl/firefox">T-Mobile</a></li>
-            <li><a class="t-mobile" href="http://www.t-mobile.pl/telefony-i-urzadzenia/telefony/cat10019.chtml">Alcatel One Touch Fire E</a></li>
           </ul>
         </div>
         <div class="provider" data-country="rs">
@@ -251,7 +162,6 @@
         <div class="provider" data-country="ru">
           <h3>{{_('Russia')}}</h3>
           <ul>
-            <li><a class="ebay" href="http://www.ebay.com/itm/eBay-Exclusive-ZTE-OPEN-C-Dual-Core-4-Latest-Firefox-OS-3G-Unlocked-Smartphone-/111326263156?ssPageName=STRK:MESE:IT">eBay</a></li>
             <li><a class="megafon" href="http://shop.megafon.ru/pathfinder.php?id=87125">MegaFon</a></li>
           </ul>
         </div>
@@ -264,7 +174,7 @@
         <div class="provider" data-country="sv">
           <h3>{{_('El Salvador')}}</h3>
           <ul>
-            <li><a class="movistar" href="http://www.movistar.com.sv/tienda/Open-Catalog/Productos/Celulares/c/celulares?q=%3Aname-asc%3Abrand%3Abrand_alcatel%3ASistema+Operativo%3AFirefox+OS">{{_('Movistar')}}</a></li>
+            <li><a class="movistar" href="http://www.movistar.com.sv/tienda_sv/Open-Catalog/Productos/Celulares/Smartphone/ZTE-Open-2/p/zte_open2">{{_('Movistar')}}</a></li>
           </ul>
         </div>
         <div class="provider" data-country="tn">
@@ -277,18 +187,6 @@
           <h3>{{_('Uruguay')}}</h3>
           <ul>
             <li><a class="movistar" href="http://www.firefoxos.movistar.com.uy/">Movistar</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="ve">
-          <h3>{{_('Venezuela')}}</h3>
-          <ul>
-            <li><a class="movistar" href="http://www.movistar.com.ve/movistar_firefox/index.html">Movistar</a></li>
-          </ul>
-        </div>
-        <div class="provider" data-country="za">
-          <h3>{{_('South Africa')}}</h3>
-          <ul>
-            <li><a class="mtn" href="https://shop.mtn.co.za/crs/browse/productFilter.jsp?brand=Alcatel">MTN</a></li>
           </ul>
         </div>
       </section>
