--- a/bedrock/firefox/templates/firefox/push.html
+++ b/bedrock/firefox/templates/firefox/push.html
@@ -69,7 +69,7 @@
       </p>
       <p>
         {{ _('On Firefox for desktop, the push service is operated by Mozilla.') }}
-        {{ _('Firefox uses the same <a href="%s">Google Cloud Messaging</a> platform and infrastructure that your other Android applications use.')|format('https://developers.google.com/cloud-messaging/') }}
+        {{ _('Firefox for Android uses the same <a href="%s">Google Cloud Messaging</a> platform and infrastructure that your other Android applications use.')|format('https://developers.google.com/cloud-messaging/') }}
       </p>
       <p>
         {{ _('In both cases, the push service cannot decrypt your push messages.') }}
@@ -102,7 +102,7 @@
       <ol>
         <li>{{ _('In the URL bar, type <em>about:permissions</em>.') }}</li>
         <li>{{ _('Select <em>All Sites</em>.') }}</li>
-        <li>{{ _('Set the <em>Receive Push Notifications</em> to <strong>Block</strong>. The site will not be able to send you messages or ask for access to Push.') }}</li>
+        <li>{{ _('Set the <em>Receive Push Notifications</em> to <strong>Block</strong>. Websites will not be able to send you messages or ask for access to Push.') }}</li>
       </ol>
     </div>
   </section>
