Bug 1136436 - remove waffle switch for iOS page
Also sneaking in a fix for a minor display bug on the sync signed in icon.

--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -400,9 +400,9 @@ a.go {
             display: inline-block;
             width: 26px;
             height: 26px;
-            margin: 0 10px;
+            margin: -5px 10px 0;
             vertical-align: middle;
-            background-position: -142px -390px;
+            background-position: -142px -388px;
             background-repeat: no-repeat;
             .at2x('/media/img/firefox/ios/sync-icon-sprite.png', 292px, 426px);
         }
