[fix bug 1202438] Update bedrock local references to migrated MPL pages

--- a/bedrock/foundation/templates/foundation/licensing.html
+++ b/bedrock/foundation/templates/foundation/licensing.html
@@ -29,8 +29,8 @@
 
   <p>
     {% trans
-      mpl="//www.mozilla.org/MPL/",
-      policy="//www.mozilla.org/MPL/license-policy.html"
+      mpl=url('mozorg.mpl.index'),
+      policy=url('mozorg.mpl.licence-policy')
     %}
       For more details, please read about our
       <a href="{{ mpl }}">source code license</a> and
