--- a/bedrock/legal/templates/legal/firefox.html
+++ b/bedrock/legal/templates/legal/firefox.html
@@ -23,7 +23,7 @@
       </p>
       <ul>
         <li>
-          Firefox is made available to you under the terms of the <a href="/MPL/">Mozilla Public
+          Firefox is made available to you under the terms of the <a href="{{ url('mozorg.mpl.index') }}">Mozilla Public
           License</a>. This means you may use, copy and distribute Firefox to others. You are also
           welcome to modify the source code of Firefox as you want to meet your needs. The Mozilla
           Public License also gives you the right to distribute your modified versions.
