--- a/bedrock/mozorg/templates/mozorg/mpl/1.1/annotated/index.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/1.1/annotated/index.html
@@ -384,8 +384,8 @@ a good faith effort to explain the license in simpler language.</p>
         Availability of Source Code.
         <span class="popup">
           This provision is intended to ensure availability of code, while
-          minimizing the burden on each Contributor. You do not need to ship 
-          Source Code to your Modifications with each Executable, as long as 
+          minimizing the burden on each Contributor. You do not need to ship
+          Source Code to your Modifications with each Executable, as long as
           you make it available on-line and tell the recipient where it is.
           It does not require that you return Modifications to mozilla.org or
           any other named organization. However, you may do so if you choose,
@@ -526,8 +526,8 @@ a good faith effort to explain the license in simpler language.</p>
     a description of how and where You have fulfilled the obligations of
     Section <b>3.2</b>. The notice must be conspicuously included in any
     notice in an Executable version, related documentation or collateral in
-    which You describe recipients' rights relating to the Covered Code. 
-    
+    which You describe recipients' rights relating to the Covered Code.
+
     <a class="mouseover" href="#">
       <span class="popup changed">
         The goal of the MPL is to encourage as much innovation as possible.
@@ -611,7 +611,7 @@ a good faith effort to explain the license in simpler language.</p>
     <b>6.1. New Versions</b>.
 
     <p>Netscape Communications Corporation ("Netscape") may publish revised
-    and/or new versions of the License from time to time. 
+    and/or new versions of the License from time to time.
     <i>[Editor's note: this power now rests with the Mozilla
     Foundation, not Netscape.]</i>
     Each version will
@@ -631,7 +631,7 @@ a good faith effort to explain the license in simpler language.</p>
     <p>Once Covered Code has been published under a particular version of the
     License, You may always continue to use it under the terms of that
     version. You may also choose to use such Covered Code under the terms of
-    any subsequent version of the License published by Netscape 
+    any subsequent version of the License published by Netscape
     <i>[The Mozilla Foundation]</i>. No one other
     than Netscape <i>[The Mozilla Foundation]</i> has the right to modify the terms applicable to Covered
     Code created under this License.</p>
@@ -757,7 +757,7 @@ a good faith effort to explain the license in simpler language.</p>
     MAY NOT APPLY TO YOU.
   </dd>
 
-  <dt>10. 
+  <dt>10.
     <a class="mouseover" href="#">
       U.S. GOVERNMENT END USERS.
       <span class="popup">
@@ -766,7 +766,7 @@ with the relevant United States Federal Acquisition Regulations their
 rights and obligations with respect to the code are only as specified in
 the MPL, and do not include other implied rights that might otherwise
 apply only to the US government. This section has no practical effect on
-licensees who are not US government end users.      
+licensees who are not US government end users.
       </span>
     </a>
   </dt>
@@ -860,7 +860,7 @@ licensees who are not US government end users.
 <pre>
 The contents of this file are subject to the Mozilla Public License Version 1.1
 (the "License"); you may not use this file except in compliance with the
-License. You may obtain a copy of the License at http://www.mozilla.org/MPL/
+License. You may obtain a copy of the License at https://www.mozilla.org/MPL/
 
 Software distributed under the License is distributed on an "AS IS" basis,
 WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License for
@@ -896,4 +896,3 @@ Code Source Code for Your Modifications.]
 
   </body>
 </html>
-
