--- a/bedrock/mozorg/templates/mozorg/mpl/2.0/index.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/2.0/index.html
@@ -13,8 +13,8 @@
   <link href='https://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
 
   <style type="text/css">
-	body { 	font-family: 'Crimson Text', serif; 
-		max-width: 30em; 
+	body { 	font-family: 'Crimson Text', serif;
+		max-width: 30em;
 		margin-left:auto;
 		margin-right:auto;
 		text-align: justify;
@@ -22,12 +22,12 @@
 		font-size: 110%
 		}
 
-	h1, h2, h3 { 
+	h1, h2, h3 {
 		font-family: 'Lora', serif;
 	     	font-variant: small-caps;
 		}
 
-	h1 { 
+	h1 {
 		text-align: center;
 		-moz-hyphens: none;
 		font-size: 160%;
@@ -37,18 +37,18 @@
 		-moz-hyphens: none;
 		text-align: left;
 		}
-	h3 {	
+	h3 {
 		font-size: 120%;
 		-moz-hyphens: none;
-		text-align: left;		
+		text-align: left;
 		}
 
-	blockquote { 	
+	blockquote {
 		font-family: 'Droid Sans Mono', mono;
-		text-align: left; 
+		text-align: left;
 		-moz-hyphens: none;
 		}
-	
+
 	code {
 		font-family: 'Droid Sans Mono', mono;
 		}
@@ -67,7 +67,7 @@
 	}
 
 	dt {	font-family: 'Lora', serif;
-		font-weight: bold; 
+		font-weight: bold;
 		font-size: 100%;
 		}
 
@@ -193,7 +193,7 @@
 <p>If You choose to distribute Source Code Form that is Incompatible With Secondary Licenses under the terms of this version of the License, the notice described in Exhibit B of this License must be attached.</p>
 <h2 id="exhibit-a---source-code-form-license-notice">Exhibit A - Source Code Form License Notice</h2>
 <blockquote>
-<p>This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.</p>
+<p>This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.</p>
 </blockquote>
 <p>If it is not possible or desirable to put the notice in a particular file, then You may include the notice in a location (such as a LICENSE file in a relevant directory) where a recipient would be likely to look for such a notice.</p>
 <p>You may add additional accurate notices of copyright ownership.</p>
