--- a/bedrock/mozorg/templates/mozorg/partnerships-distribution.html
+++ b/bedrock/mozorg/templates/mozorg/partnerships-distribution.html
@@ -23,7 +23,7 @@
 <section id="distributions">
   <p>If you’re interested in creating and distributing customized versions of our branded products to help promote your add-on, products, or service offerings, please contact us. We’ll guide you through the customization process, and provide you with the tools and assistance you need to create a unique version of our product(s) for distribution.</p>
   <p>Please note that any customizations to Firefox and other branded products intended for distribution require Mozilla's approval. For further information on our distribution policies, please see the <a href="#policies">Policies section</a>.</p>
-  <p>For information on incorporating Mozilla technology into your product or service offering, you should review the terms of the <a href="/MPL/">Mozilla Public License</a> for information on our source code licensing.</p>
+  <p>For information on incorporating Mozilla technology into your product or service offering, you should review the terms of the <a href="{{ url('mozorg.mpl.index') }}">Mozilla Public License</a> for information on our source code licensing.</p>
 
   <h3 id="policies">Policies</h3>
   <p>Distribution of unmodified copies of our product installers, disk images, and/or tarballs downloaded from mozilla.org is permitted under the terms of our distribution policy, and does not require an agreement.</p>
