--- a/bedrock/persona/templates/persona/terms-of-service.html
+++ b/bedrock/persona/templates/persona/terms-of-service.html
@@ -123,7 +123,7 @@
     {{ _('Mozilla does not grant you any intellectual property rights in the Services that are not specifically stated in this TOS.  For example, this TOS does not provide the right to use any of Mozilla’s copyrights, trade names, trademarks, service marks, logos, domain names, or other distinctive brand features.') }}
   </p>
   <p>
-    {{ _('The Firefox Clients are distributed under and subject to the current version of the <a href="%s">Mozilla Public License</a>, located at <tt><a href="%s">http://www.mozilla.org/MPL</a></tt>.')|format('/MPL/', '/MPL/') }}
+    {{ _('The Firefox Clients are distributed under and subject to the current version of the <a href="%s">Mozilla Public License</a>, located at <tt><a href="%s">https://www.mozilla.org/MPL</a></tt>.')|format(url('mozorg.mpl.index'), url('mozorg.mpl.index')) }}
   </p>
 
   <h4>{{ _('Updates to the Terms') }}</h4>
