--- a/bedrock/styleguide/templates/styleguide/identity/firefoxos-promo-materials.html
+++ b/bedrock/styleguide/templates/styleguide/identity/firefoxos-promo-materials.html
@@ -14,11 +14,11 @@
 {% block content_area %}
 <section id="intro">
   <h2>Introduction</h2>
-  <p>This page contains the visual identity for promoting Firefox OS. 
-  Because certain assets are subject to partnership and licensing 
-  agreements, we created these materials specifically and specially 
-  for community and developer use. They’re intended to represent the 
-  creation phase of Firefox OS and how all Mozillians play a part in 
+  <p>This page contains the visual identity for promoting Firefox OS.
+  Because certain assets are subject to partnership and licensing
+  agreements, we created these materials specifically and specially
+  for community and developer use. They’re intended to represent the
+  creation phase of Firefox OS and how all Mozillians play a part in
   bringing it to life.</p>
 </section>
 
@@ -38,7 +38,7 @@
     <li>use these materials on websites or other places containing content associated with hate speech, pornography, gambling or illegal activities</li>
     <li>use these materials to, or in connection with, content that disparages us or sullies our reputation</li>
   </ul>
-  <p class="copyright-note"><small>The logo files containing our trademarks are available under the following copyright licenses: vector logo files under <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY 3.0</a> or later; bitmap logo files under <a href="http://www.mozilla.org/MPL/2.0/">MPL 2</a>.</small></p>
+  <p class="copyright-note"><small>The logo files containing our trademarks are available under the following copyright licenses: vector logo files under <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY 3.0</a> or later; bitmap logo files under <a href="{{ url('mozorg.mpl.2.0.index') }}">MPL 2</a>.</small></p>
 </section>
 
 <section id="artwork">
