--- a/bedrock/foundation/templates/foundation/licensing/website-content.html
+++ b/bedrock/foundation/templates/foundation/licensing/website-content.html
@@ -25,17 +25,21 @@
   href="https://creativecommons.org/licenses/by-sa/3.0/legalcode">detailed
   terms</a>.</p>
 
-  <p>{% trans styleguide=url('styleguide.home') %}
+  <p>
+    {% trans
+      styleguide=url('styleguide.home'),
+      mpl2=url('mozorg.mpl.2.0.index')
+    %}
   Trademark rights in the trademarks, logos, service marks of the Mozilla
   Foundation, as well as the look and feel of this web site, are not licensed
   under the terms mentioned above. Details of permitted uses for our
   trademarks can be found in our
-  <a href="{{ styleguide }}">Style Guide</a>. 
+  <a href="{{ styleguide }}">Style Guide</a>.
   The logo files containing our trademarks are available under the following
   copyright licenses: vector logo files under
   <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY 3.0</a> or
   later; bitmap logo files under
-  <a href="http://www.mozilla.org/MPL/2.0/">MPL 2</a>.
+  <a href="{{ mpl2 }}">MPL 2</a>.
   If you have any questions about complying with our licensing terms for this
   collection, you should email:
   {% endtrans %}</p>
