--- a/bedrock/styleguide/templates/styleguide/identity/firefox-branding.html
+++ b/bedrock/styleguide/templates/styleguide/identity/firefox-branding.html
@@ -31,7 +31,7 @@
       <li><a href="https://assets.mozilla.org/portal/assets/#/asset/206" class="button-sand">PNG</a></li>
     </ul>
   </div>
-  <p class="copyright-note"><small>The logo files containing our trademarks are available under the following copyright licenses: vector logo files under <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY 3.0</a> or later; bitmap logo files under <a href="http://www.mozilla.org/MPL/2.0/">MPL 2</a>.</small></p>
+  <p class="copyright-note"><small>The logo files containing our trademarks are available under the following copyright licenses: vector logo files under <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY 3.0</a> or later; bitmap logo files under <a href="{{ url('mozorg.mpl.2.0.index') }}">MPL 2</a>.</small></p>
 </section>
 <section id="usage">
   <h2>Usage</h2>
