--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -91,10 +91,10 @@
     <nav id="nav-main" role="navigation">
       <span class="toggle" role="button" aria-controls="nav-main-menu" aria-expanded="false" tabindex="0">{{_('Menu')}}</span>
       <ul id="nav-main-menu">
-        <li class="first"><a data-name="donate" href="{{ donate_url('mozillaorg_topNAV') }}">{{_('Donate')}}</a></li>
-        <li><a data-name="mission" href="{{ url('mozorg.mission') }}">{{_('Mission')}}</a></li>
-        <li><a data-name="firefox" href="{{ url('firefox.family.index') }}">{{_('Firefox')}}</a></li>
-        <li class="last"><a data-name="community" href="{{ url('mozorg.contribute') }}">{{_('Community')}}</a></li>
+        <li class="first"><a data-link-type="donate" data-element-location="nav click" href="{{ donate_url('mozillaorg_topNAV') }}">{{_('Donate')}}</a></li>
+        <li><a data-link-type="mission" data-element-location="nav click" href="{{ url('mozorg.mission') }}">{{_('Mission')}}</a></li>
+        <li><a data-link-type="firefox" data-element-location="nav click" href="{{ url('firefox.family.index') }}">{{_('Firefox')}}</a></li>
+        <li class="last"><a data-link-type="community" data-element-location="nav click" href="{{ url('mozorg.contribute') }}">{{_('Community')}}</a></li>
       </ul>
     </nav>
   </div>
