[fix bug 1201897] Fix MPL License Policy page URL

--- a/bedrock/foundation/templates/foundation/licensing.html
+++ b/bedrock/foundation/templates/foundation/licensing.html
@@ -30,7 +30,7 @@
   <p>
     {% trans
       mpl=url('mozorg.mpl.index'),
-      policy=url('mozorg.mpl.licence-policy')
+      policy=url('mozorg.mpl.license-policy')
     %}
       For more details, please read about our
       <a href="{{ mpl }}">source code license</a> and
