--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/policies.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/policies.html
@@ -35,7 +35,7 @@
 
 <ul>
   <li><a href="{{ url('mozorg.mpl.index') }}">{{ _('Source Code Licensing Terms') }}</a></li>
-  <li><a href="{{ url('mozorg.mpl.licence-policy') }}">{{ _('Mozilla Foundation License Policy') }}</a></li>
+  <li><a href="{{ url('mozorg.mpl.license-policy') }}">{{ _('Mozilla Foundation License Policy') }}</a></li>
   <li><a href="{{ url('legal.eula') }}">{{ _('Mozilla Corporation End-User Licensing Agreement') }}</a></li>
   <li><a href="{{ url('legal.eula') }}">{{ _('Mozilla Foundation End-User Licensing Agreement') }}</a></li>
 </ul>
