--- a/bedrock/mozorg/templates/mozorg/mpl/index.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/index.html
@@ -31,7 +31,7 @@
         <h2>Mozilla Licensing Information</h2>
         <p>The Mozilla Project is only one of many users of the MPL, but because many people come to this page looking for information about Mozilla's open source licensing policies and practices, we've provided the information below as a reference.
         <h3>Correctly Licensing New Source Code</h3>
-        <p>Any new code checked into Mozilla's source repositories needs to comply with Mozilla's source code <a href="{{ url('mozorg.mpl.licence-policy') }}">licensing policy</a>. Please use the <a href="{{ url('mozorg.mpl.headers.index') }}">appropriate header text</a> at the top of each file.</p>
+        <p>Any new code checked into Mozilla's source repositories needs to comply with Mozilla's source code <a href="{{ url('mozorg.mpl.license-policy') }}">licensing policy</a>. Please use the <a href="{{ url('mozorg.mpl.headers.index') }}">appropriate header text</a> at the top of each file.</p>
         <h3>Licenses For Existing Source Code</h3>
         <p>Most Mozilla software projects use the MPL, but some have different terms. Detailed information on the licensing of existing code can be found by inspecting its license headers, or by visiting the license information page in the relevant Mozilla software.</p>
         <p>For information on how other things are licensed, including Mozilla's trademarks and websites, see our <a href="{{ url('foundation.licensing') }}">general licensing information page</a>.</p>
