--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/commit/requirements.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/commit/requirements.html
@@ -42,7 +42,7 @@ the Internet.') }}</p>
 <h2>{{ _('License Terms') }}</h2>
 
 <p>
-{% trans license_policy=url('mozorg.mpl.licence-policy'),
+{% trans license_policy=url('mozorg.mpl.license-policy'),
          headers=url('mozorg.mpl.headers.index') %}
 Code committed by you to a Mozilla Repository, whether written by you or a
 third party, must be governed by the Mozilla Public License 2.0, or another
