Fix Bug 1199145, add about link to landing page

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -93,6 +93,7 @@
       <ul id="nav-main-menu">
         <li class="first"><a data-link-type="donate" data-element-location="nav click" href="{{ donate_url('mozillaorg_topNAV') }}">{{_('Donate')}}</a></li>
         <li><a data-link-type="mission" data-element-location="nav click" href="{{ url('mozorg.mission') }}">{{_('Mission')}}</a></li>
+        <li><a data-link-type="about" data-element-location="nav click" href="{{ url('mozorg.about') }}">{{_('About')}}</a></li>
         <li><a data-link-type="firefox" data-element-location="nav click" href="{{ url('firefox.family.index') }}">{{_('Firefox')}}</a></li>
         <li class="last"><a data-link-type="community" data-element-location="nav click" href="{{ url('mozorg.contribute') }}">{{_('Community')}}</a></li>
       </ul>
