Fix Bug 1175199, update webmaker logo on mozorg

--- a/bedrock/styleguide/templates/styleguide/identity/webmaker-branding.html
+++ b/bedrock/styleguide/templates/styleguide/identity/webmaker-branding.html
@@ -27,7 +27,7 @@
     <li>use our logos to, or in connection with, content that disparages us or sullies our reputation</li>
   </ul>
   <div class="guidelines-logo">
-    <img src="{{ static('img/styleguide/identity/webmaker/logo.png') }}" alt="Logo" />
+    {{ high_res_img('styleguide/identity/webmaker/logo.png', {'alt': 'Logo'}) }}
     <h3>Download</h3>
     <ul class="button-list">
       <li><a href="https://assets.mozilla.org/portal/assets/#asset/76" class="button-sand">EPS</a></li>
@@ -39,11 +39,11 @@
 </section>
 <section id="usage">
   <h2>Usage</h2>
-  <div><img src="{{ static('img/styleguide/identity/webmaker/usage-logo-wordmark.png') }}" alt="Usage Wordmark" /></div>
+  <div>{{ high_res_img('styleguide/identity/webmaker/usage-logo-wordmark.png', {'alt': 'Usage Wordmark'}) }}</div>
   <p>Our standard lockup for representing Webmaker. In most cases, use this.</p>
-  <div><img src="{{ static('img/styleguide/identity/webmaker/usage-logo.png') }}" alt="Usage Logo" /></div>
+  <div>{{ high_res_img('styleguide/identity/webmaker/usage-logo.png', {'alt': 'Usage Logo'}) }}</div>
   <p>The logo on its own. You can safely use this if Mozilla and Webmaker are clearly visible or well established elsewhere on the page or in the design.</p>
-  <div class="clear"><img src="{{ static('img/styleguide/identity/webmaker/usage-logo-bw.png') }}" alt="Usage Logo" /></div>
+  <div class="clear">{{ high_res_img('styleguide/identity/webmaker/usage-logo-bw.png', {'alt': 'Usage Logo'}) }}</div>
   <p>The one-color glyph can be used to represent Webmaker when a full color logo is not an option.</p>
 </section>
 <section id="wordmark">
@@ -53,8 +53,8 @@
   </div>
   <div class="logo">
     <img src="{{ static('img/styleguide/box-arrow-left.png') }}" alt="" class="box-arrow" />
-    <img src="{{ static('img/styleguide/identity/webmaker/wordmark-logo.png') }}" alt="Logo" />
-    <img src="{{ static('img/styleguide/identity/webmaker/wordmark.png') }}" alt="Logo" />
+    {{ high_res_img('styleguide/identity/webmaker/wordmark-logo.png', {'alt': 'Logo'}) }}
+    {{ high_res_img('styleguide/identity/webmaker/wordmark.png', {'alt': 'Logo'}) }}
   </div>
   <div class="download">
     <h4>Download</h4>
