--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -610,13 +610,13 @@ html[dir="rtl"] #phone-wrapper figure {
         border-radius: 6px;
         color: #fff;
         width: auto;
-        margin-right: 20px;
+        margin-right: @gridGutterWidth;
 
         // largely appropriated from send-to-device.less
         h2 {
             max-width: none;
             .font-size(24px);
-            padding-bottom: 20px;
+            padding-bottom: @baseLine;
             color: #fff;
         }
 
